change server tester

--- a/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
+++ b/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
@@ -128,12 +128,14 @@ Response to tech assessment challenge at:
 ]</textarea>
 <hr />
 Server Test<br />
-<form action="https://lipaotwig-jcc9.c9users.io/distribution" method="POST">
+<form action="https://lipaotwig-jcc9.c9users.io/price" method="POST">
  <textarea name="orders"></textarea>
  <input type=submit value=Price>
- <input type=button value="Distribution"
- onclick="this.form.action='https://lipaotwig-jcc9.c9users.io/distribution';this.form.submit()">
-<form>
+</form>
+<form action="https://lipaotwig-jcc9.c9users.io/distribution" method="POST">
+ <textarea name="orders"></textarea>
+ <input type=submit value=Distribution>
+</form>
 
 
 <script src=orderfees.js></script>
