--- a/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
+++ b/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
@@ -126,8 +126,9 @@ Response to tech assessment challenge at:
     ]
   }
 ]</textarea>
+<input type=button value="Run Parts 1 & 2" onclick="new OrderFees().start()">
 <hr />
-Server Test<br />
+Server API Test<br />
 <form action="https://lipaotwig-jcc9.c9users.io/price" method="POST">
  <textarea name="orders"></textarea>
  <input type=submit value=Price>
@@ -137,8 +138,4 @@ Server Test<br />
  <input type=submit value=Distribution>
 </form>
 
-
 <script src=orderfees.js></script>
-<script>
-new OrderFees().start();
-</script>
