r0.113 insert tbc sample js code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.112 9/7/2017 -->
+<!-- r0.113 9/7/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -8,8 +8,15 @@
 <textarea></textarea>
 </div>
 </body>
-<script src=js/ts604.js></script>
+<script src="dentre-ortega/guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
 <script src=js/ts602.js?_cfg></script>
+<script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
+<script>
+  TBC.crunch("tbc_-247_58", ({ value }) => {
+    var d=document;
+    d.body.appendChild( d.createElement("div") ).innerHTML= value;
+  });
+</script>
 <script>
 //6-1-2016 twigbud.htm config
 js604= pkg;
