--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.113 9/7/2017 -->
+<!-- r0.114 9/7/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -19,7 +19,7 @@
 </script>
 <script>
 //6-1-2016 twigbud.htm config
-js604= pkg;
-js604.appTool.exposeClassNames( js604 );
-js604.starter.start(cfg);
+//js604= pkg;
+//js604.appTool.exposeClassNames( js604 );
+//js604.starter.start(cfg);
 </script>
