r0.116 try another cell

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.115 9/7/2017 -->
+<!-- r0.116 9/7/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -12,9 +12,8 @@
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
 <script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
 <script>
-  TBC.crunch("tbc_-247_58", ({ value }) => {
-    var d=document;
-    d.body.appendChild( d.createElement("div") ).innerHTML= value;
+  TBC.crunch("tbc_-247_60", ({ value }) => {
+    ( (d,v) => {d.body.appendChild( d.createElement("div") ).innerHTML= v;} )(document,value)
   });
 </script>
 <script>
