--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.124 9/7/2017 -->
+<!-- r0.215 9/7/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -7,7 +7,7 @@
 <div>
 <textarea></textarea>
 </div>
-  <a href="saanitch/demo.html">stable version</a>
+  <a href="saanitch-c/demo.html">stable version</a>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
