r0.316 publish to same element

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.315 9/7/2017 -->
+<!-- r0.316 9/7/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -17,16 +17,16 @@
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
 <script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
 <script>
-  function write(d,s){ d.body.appendChild( d.createElement("div") ).innerHTML=s }
+  function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el }
   TBC.crunch("tbc_-4_-23", ({ value }) => {write(document,value)});
   function reloadPage(){ location="?"+Math.random() }
   
   (function(fm){
-    function addTbcCrunch(spaceid){
-      TBC.crunch(spaceid,  ({ value }) => {write(document,value)});
-    }
     fm.doClick=function(button){ if (button.value=="Subscribe") this.crunch() }
-    fm.crunch=function(){ addTbcCrunch(this.elements["spaceid"].value) }
+    fm.crunch=function(){
+      var el= write(document,"..."), spaceid= this.elements["spaceid"].value;
+      TBC.crunch(spaceid, ({ value }) => {el.innerHTML=value} )
+    }
   })( document.forms[0] )
 </script>
 <script>
