--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.317 9/8/2017 -->
+<!-- r0.324 9/8/2017 -->
 <body>
 <div>Use this page to demo embeds and live links from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
-<div>From tbc, we know<span id=tbc_insert>...</span></div>
+<div>Space ID<span id=tbc_insert></span></div>
 <form>
 <input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
 </form>
@@ -18,14 +18,14 @@
 <script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
 <script>
   function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
-  TBC.crunch("tbc_-4_-23", ({ value }) => {write(document,value);});
+  TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   function reloadPage(){ location="?"+Math.random() }
   
   (function(fm){
     fm.doClick=function(button){ if (button.value=="Subscribe") this.crunch() }
     fm.crunch=function(){
       var el= write(document,"..."), spaceid= this.elements["spaceid"].value;
-      TBC.crunch(spaceid, ({ value }) => {el.innerHTML=value} )
+      TBC.crunch(spaceid, function(o){el.innerHTML=o.value} )
     }
   })( document.forms[0] )
 </script>
