--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.325 9/8/2017 -->
+<!-- r1.326 9/8/2017 -->
 <body>
 <div>Use this page to demo embeds and live feeds from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -8,9 +8,14 @@
 <input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
 </form>
 <div>
-<textarea></textarea>
+<textarea>Sample IDs
+tbc_-288_-14
+tbc_0_-2
+tbc_-8_12
+tbc_5_1
+tbc_5_3</textarea>
 </div>
-  <a href="saanitch-c/demo.html">stable version</a>
+  <a href="saanitch style="display:none"-c/demo.html">stable version</a>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
@@ -25,9 +30,10 @@
     fm.doClick=function(button){ if (button.value=="Subscribe") this.crunch() }
     fm.crunch=function(){
       var el= write(document,"..."), spaceid= this.elements["spaceid"].value;
-      TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" ")} )
+      TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
     }
   })( document.forms[0] )
+  //TODO: show recent history
 </script>
 <script>
 //6-1-2016 twigbud.htm config
