--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r1.328 9/8/2017 -->
+<!-- r1.329 9/8/2017 -->
 <body>
 <div>Use this page to demo embeds and live feeds from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
@@ -18,7 +18,6 @@
 <script>
   function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
   TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
-  function reloadPage(){ location="?"+Math.random() }
   
   (function(fm){
     fm.doClick=function(button){ if (button.value=="Subscribe") this.crunch() }
@@ -28,7 +27,8 @@
     }
   })( document.forms[0] )
   //TODO: show recent history
-  ["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12","tbc_-288_-14"].map( function(id){document.forms[0].crunch(id)} );
+  ["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12"].map( function(id){document.forms[0].crunch(id)} );
+  function reloadPage(){ location="?"+Math.random() }
 </script>
 <script>
 //6-1-2016 twigbud.htm config
