--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r1.329 9/8/2017 -->
+<!-- r1.331 9/8/2017 -->
 <body>
 <div>Use this page to demo embeds and live feeds from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
 <div>Space ID<span id=tbc_insert></span></div>
 <form>
 <input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
+<textarea></textarea><input type=button value="Try code" onclick="this.form.doClick(this)">  
 </form>
-<div>
-<textarea></textarea>
-</div>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
@@ -20,14 +18,21 @@
   TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   
   (function(fm){
-    fm.doClick=function(button){ if (button.value=="Subscribe") this.crunch() }
+    fm.doClick=function(button){
+      if (button.value=="Subscribe") this.crunch()
+      if (button.value=="Try code") this.runCode()
+    }
+    fm.runCode=function(){
+      var res="<frameset rows-"50%,*"><frame src='"+location+"></frame><frame></frame></frameset>";
+      window.top.document.innerHTML= res;
+    }
     fm.crunch=function(spaceid){
-      var el= write(document,"..."), spaceid= this.elements["spaceid"].value;
+      var el= write(document,"..."), spaceid |= this.elements["spaceid"].value;
       TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
     }
   })( document.forms[0] )
   //TODO: show recent history
-  ["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12"].map( function(id){document.forms[0].crunch(id)} );
+  //["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12"].map( function(id){document.forms[0].crunch(id)} );
   function reloadPage(){ location="?"+Math.random() }
 </script>
 <script>
