--- a/saanitch-c/demo.html
+++ b/saanitch-c/demo.html
@@ -1,20 +1,38 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r0.124 9/8/2017 -->
+<!-- r1.334 9/8/2017 -->
 <body>
-<div>Use this page to demo embeds and live links from other sites.</div>
+<div>Use this page to demo embeds and live feeds from other sites.</div>
 <div id=app_client_div>&nbsp;</div>
-<div>From tbc, we know<span id=tbc_insert>...</span></div>
-<div>
-<textarea></textarea>
-</div>
+<div>Space ID<span id=tbc_insert></span></div>
+<form>
+<input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
+<textarea></textarea><input type=button value="Try code" onclick="this.form.doClick(this)">  
+</form>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
 <script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
-<script src="http://localhost:3000/tbc_sdk.js"></script>
+<script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
 <script>
-  function write(d,s){ d.body.appendChild( d.createElement("div") ).innerHTML=s }
-  TBC.crunch("tbc_2_-2", function(o){ write(document,o.value); });
+  function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
+  TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
+  
+  (function(fm){
+    fm.doClick=function(button){
+      if (button.value=="Subscribe") this.crunch()
+      if (button.value=="Try code") this.runCode()
+    }
+    fm.runCode=function(){
+      var res="<frameset rows-"50%,*"><frame src='"+location+"'></frame><frame></frame></frameset>";
+      window.top.document.innerHTML= res;
+    }
+    fm.crunch=function(spaceid){
+      var el= write(document,"..."), spaceid |= this.elements["spaceid"].value;
+      TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
+    }
+  })( document.forms[0] )
+  //TODO: show recent history
+  //["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12"].map( function(id){document.forms[0].crunch(id)} );
   function reloadPage(){ location="?"+Math.random() }
 </script>
 <script>
