r1.338 worst deployment nigtmare, no reliable indication of version, courtesy of ghp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r1.337 9/10/2017 -->
+<!-- r1.338 9/10/2017 -->
 <body>
-<div>Use this page to demo embeds and live feeds from other sites.</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r1.338]</div>
 <div id=app_client_div>&nbsp;</div>
 <div>Space ID<span id=tbc_insert></span></div>
 <form>
