--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<!-- r1.338 9/10/2017 -->
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r1.338]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r1.339]</div>
+                                      <!-- 9/10/2017 -->
 <div id=app_client_div>&nbsp;</div>
 <div>Space ID<span id=tbc_insert></span></div>
 <form>
@@ -22,13 +22,19 @@
       if (button.value=="Subscribe") this.crunch()
       //if (button.value=="Try code") this.runCode()
     }
-    fm.crunch=function(spaceid){
-      var el= write(document,"..."), spaceid |= this.elements["spaceid"].value;
+    fm.crunch=function(spid){
+      var el= write(document,"..."), spaceid= (spid)?spid:this.elements["spaceid"].value;
       TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
     }
+    fm.preset= function(){
+      if (this.q.length<1) return;
+      this.crunch(this.q.pop());
+      setTimeout( "fm.preset()",500 );
+    }
+    fm.q=["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12","tbc_0_-2"];
+    fm.preset();
   })( document.forms[0] )
   //TODO: show recent history
-  //["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12"].map( function(id){document.forms[0].crunch(id)} );
   function reloadPage(){ location="?"+Math.random() }
 </script>
 <script>
