--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r1.339]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r1.341]</div>
                                       <!-- 9/10/2017 -->
 <div id=app_client_div>&nbsp;</div>
 <div>Space ID<span id=tbc_insert></span></div>
 <form>
 <input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
-<textarea></textarea>
+<br /><textarea></textarea>
 </form>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
@@ -26,13 +26,13 @@
       var el= write(document,"..."), spaceid= (spid)?spid:this.elements["spaceid"].value;
       TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
     }
-    fm.preset= function(){
+    fm.preset= function(frm){
       if (this.q.length<1) return;
       this.crunch(this.q.pop());
-      setTimeout( "fm.preset()",500 );
+      setTimeout( "frm.preset(frm)",500 );
     }
     fm.q=["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12","tbc_0_-2"];
-    fm.preset();
+    fm.preset(fm);
   })( document.forms[0] )
   //TODO: show recent history
   function reloadPage(){ location="?"+Math.random() }
