--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r1.341]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r1.342]</div>
                                       <!-- 9/10/2017 -->
 <div id=app_client_div>&nbsp;</div>
 <div>Space ID<span id=tbc_insert></span></div>
@@ -26,13 +26,13 @@
       var el= write(document,"..."), spaceid= (spid)?spid:this.elements["spaceid"].value;
       TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
     }
-    fm.preset= function(frm){
+    fm.preset= function(){
       if (this.q.length<1) return;
       this.crunch(this.q.pop());
-      setTimeout( "frm.preset(frm)",500 );
+      setTimeout( function(){fm.preset()},500 );
     }
     fm.q=["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12","tbc_0_-2"];
-    fm.preset(fm);
+    fm.preset();
   })( document.forms[0] )
   //TODO: show recent history
   function reloadPage(){ location="?"+Math.random() }
