--- a/index.html
+++ b/index.html
@@ -1,38 +1,57 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r1.342]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r2.39]</div>
                                       <!-- 9/10/2017 -->
-<div id=app_client_div>&nbsp;</div>
-<div>Space ID<span id=tbc_insert></span></div>
+<div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
-<input name=spaceid><input type=button value=Subscribe onclick="this.form.doClick(this)">  
-<br /><textarea></textarea>
+<span>Server </span><input name=server size=44 value="http://123456.big.io:8000">
+<xinput name=spaceid><input type=button value=Server onclick="this.form.doClick(this)">  
+<br />
 </form>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
-<script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
-<script src="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
-<script src="http://ec2-54-66-169-110.ap-southeast-2.compute.amazonaws.com:3000/tbc_sdk.js"></script>
+<script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
+<script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
 <script>
   function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
-  TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
+  //TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   
   (function(fm){
     fm.doClick=function(button){
-      if (button.value=="Subscribe") this.crunch()
+      if (button.value=="Server") this.getTBC(button)
       //if (button.value=="Try code") this.runCode()
     }
+    fm.getTBC=function(button){
+      button.disabled= true;
+      var svr= this.elements["server"].value;
+      var scr= document.createElement("script");
+      scr.src= svr+"/tbc_sdk.js";
+      document.body.append(scr);
+      this.hogTBC(1000,button);
+    }
+    fm.hogTBC= function(ms,btn){
+      if (window["TBC"]){
+        fm.mkSpaceForm(document,TBC);
+        TBC= null;
+        btn.disabled=false;
+      } else setTimeout( function(){fm.hogTBC(ms,btn)}, ms )
+    }
+    fm.mkSpaceForm= function(d,tbc){
+      var lb="Space ID ", fm=d.createElement("form");
+      fm.tbc= tbc;
+      d.body.appendChild(fm).appendChild(d.createElement("span")).innerHTML=lb;
+      fm.appendChild(d.createElement("input")).name="spaceid";
+      fm.appendChild(d.createElement("input")).name="crunchBtn";
+      this.prepButton(fm.crunchBtn,"Crunch",function(){this.form.crunch()});
+      fm.crunch= this.crunch;
+    }
+    fm.prepButton=function(el,val,fn){
+      el.type="button"; el.value=val; el.onclick= fn;
+    }
     fm.crunch=function(spid){
-      var el= write(document,"..."), spaceid= (spid)?spid:this.elements["spaceid"].value;
-      TBC.crunch(spaceid, function(o){el.innerHTML=[spaceid, o.value].join(" >>--> ")} )
+      var el= write(document,"..."), key=(spid)?spid:this.spaceid.value;
+      this.tbc.crunch(key, function(o){el.innerHTML=[key, o.value].join(" >>--> ")} )
     }
-    fm.preset= function(){
-      if (this.q.length<1) return;
-      this.crunch(this.q.pop());
-      setTimeout( function(){fm.preset()},500 );
-    }
-    fm.q=["tbc_5_1","tbc_5_3","tbc_0_-2","tbc_-8_12","tbc_0_-2"];
-    fm.preset();
   })( document.forms[0] )
   //TODO: show recent history
   function reloadPage(){ location="?"+Math.random() }
