--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r2.41]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r2.45]</div>
                                       <!-- 9/11/2017 -->
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
@@ -14,6 +14,7 @@
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
 <script>
   function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
+  //TODO: show recent history, timeout
   //TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   
   (function(fm){
@@ -23,9 +24,8 @@
     }
     fm.getTBC=function(button){
       button.disabled= true;
-      var svr= this.elements["server"].value;
       var scr= document.createElement("script");
-      scr.src= svr+"/tbc_sdk.js";
+      scr.src= this.server.value + "/tbc_sdk.js";
       document.body.appendChild(scr);
       this.hogTBC(1000,button);
     }
@@ -39,6 +39,7 @@
     fm.mkSpaceForm= function(d,tbc){
       var lb="Space ID ", fm=d.createElement("form");
       fm.tbc= tbc;
+      d.body.appendChild(d.createElement("div")).innerHTML= this.server.value;
       d.body.appendChild(fm).appendChild(d.createElement("span")).innerHTML=lb;
       fm.appendChild(d.createElement("input")).name="spaceid";
       fm.appendChild(d.createElement("input")).name="crunchBtn";
@@ -49,11 +50,10 @@
       el.type="button"; el.value=val; el.onclick= fn;
     }
     fm.crunch=function(spid){
-      var el= write(document,"..."), key=(spid)?spid:this.spaceid.value;
+      var el= this.appendChild(write(document,"…")), key=(spid)?spid:this.spaceid.value;
       this.tbc.crunch(key, function(o){el.innerHTML=[key, o.value].join(" >>--> ")} )
     }
   })( document.forms[0] )
-  //TODO: show recent history
   function reloadPage(){ location="?"+Math.random() }
 </script>
 <script>
