r2.48 use jsplayground.js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r2.46]</div>
+<div>Use this page to demo embeds and live feeds from other sites. [r2.48]</div>
                                       <!-- 9/14/2017 -->
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
@@ -12,7 +12,7 @@
 </body>
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
-<script src="dufurlo-b/lipao-ts/txtrail.js?_cfg"></script>
+<script src="dufurlo-b/lipao-ts/jsplayground.js"></script>
 <script>
   function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
   //TODO: show recent history, timeout
