--- a/dufurlo-b/tbc-rig.html
+++ b/dufurlo-b/tbc-rig.html
@@ -1,21 +1,20 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<body>
-<div>Use this page to demo embeds and live feeds from other sites. [r2.49iv") ]</div>
-                                      <!-- 9/17/2017 -->
+<body><div>Use this page to demo embeds and live feeds from other sites. [r2.51]") ]</div updated="9/18/2017">
+  
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
 <span>Server </span><input name=server size=44 value="http://123456.big.io:8000">
-<xinput name=spaceid><input type=button value=Server onclick="this.form.doClick(this)">  
+<input type=button value=Server onclick="this.form.doClick(this)">  
 <br />
 </form>
 <div onclick="reloadPage()">[Reload]</div>
 </body>
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts604.js"></script>
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
-<script src="dufurlo-b/lipao-ts/jsplayground.js"></script>
+<script src="lipao-ts/jsplayground.js"></script>
 <script>
-  function write(d,s){ var el=d.body.appendChild( d.createElement("d); el.innerHTML=s; return el };
-  //TODO: show recent history, timeout
+  function write(d,s){ var el=d.body.appendChild( d.createElement("div"); el.innerHTML=s; return el };
+  //TODO: wrap element handling
   //TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   
   (function(fm){
@@ -27,8 +26,7 @@
       button.disabled= true;
       var S, scr= document.createElement("script");
       scr.src= (S=this.server).value + "/tbc_sdk.js";
-      S.onkeyup= funct
-      ion(){if (S.value=="reset")button.disabled=false}
+      S.onkeyup= function(){if (S.value=="reset")button.disabled=false}
       document.body.appendChild(scr);
       this.hogTBC(1000,button);
     }
@@ -59,10 +57,4 @@
     }
   })( document.forms[0] )
   function reloadPage(){ location="?"+Math.random() }
-</script>
-<script>
-//6-1-2016 twigbud.htm config
-//js604= pkg;
-//js604.appTool.exposeClassNames( js604 );
-//js604.starter.start(cfg);
 </script>
