--- a/dufurlo-b/tbc-rig.html
+++ b/dufurlo-b/tbc-rig.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<body><div>Use this page to demo embeds and live feeds from other sites. [r2.51]") ]</div updated="9/18/2017">
+<body><div>Use this page to demo embeds and live feeds from other sites. [r2.52]</div updated="9/18/2017">
   
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
@@ -13,7 +13,7 @@
 <script xsrc="guptinal-i/jsto/cmdEngine-twigbud/js/ts602.js?_cfg"></script>
 <script src="lipao-ts/jsplayground.js"></script>
 <script>
-  function write(d,s){ var el=d.body.appendChild( d.createElement("div"); el.innerHTML=s; return el };
+  function write(d,s){ var el=d.body.appendChild( d.createElement("div") ); el.innerHTML=s; return el };
   //TODO: wrap element handling
   //TBC.crunch("tbc_-4_-23", function(o){ write(document,o.value); });
   
