--- a/dufurlo-b/tbc-rig.html
+++ b/dufurlo-b/tbc-rig.html
@@ -1,6 +1,6 @@
 
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<body><div>Use this page to demo embeds and live feeds from other sites. [r2.61]</div updated="9/19/2017">
+<body><div>Use this page to demo embeds and live feeds from other sites. [r2.71]</div updated="9/23/2017">
   
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 <form>
@@ -59,5 +59,5 @@
     }
   })( document.forms[0] )
   function reloadPage(){ location="?"+Math.random() }
-  function sim(){ txtrailSim( Math.random() ) }
+  function sim(){ txtrailSim( randtxt() ) }
 </script>
