new sdk version using base64 space id

--- a/dufurlo-b/tbc-viz-rig.html
+++ b/dufurlo-b/tbc-viz-rig.html
@@ -1,6 +1,12 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
 <div>Use this page to demo embeds and live feeds from other sites. [r2.72]</div updated="9/23/2017">
+
+<script src="http://123456.bigcrunch.io/tbc_sdk.js"></script>
+<script>
+  TBC.crunch("dGJjXy0zNjZfMjg1", "#container");
+</script>
+<div id="container"></div>
   
 <div id=app_client_div>&nbsp;<span id=tbc_insert></span></div>
 
