--- a/dufurlo-b/tbc-viz-rig.html
+++ b/dufurlo-b/tbc-viz-rig.html
@@ -1,8 +1,16 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-<div>Use this page to demo embeds and live feeds from other sites. [r2.72]</div updated="9/23/2017">
+<div>Use this page to demo embeds and live feeds from other sites. [r2.81]</div updated="10/4/2017">
+
+<iframe src="http://123456.bigcrunch.io:3000/v/dGJjXy0zOTZfMjc4" scrolling="no"></iframe>
 
 <script src="http://123456.bigcrunch.io/tbc_sdk.js"></script>
+<script>
+  TBC.crunch("dGJjXy0zOTZfMjc4", "#container0");
+</script>
+<div id="container0"></div>
+  
+  
 <script>
   TBC.crunch("dGJjXy0zNjZfMjg1", "#container");
 </script>
