--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
@@ -15,3 +15,5 @@ https://stackoverflow.com/questions/37721676/web-app-with-qpython-an-sl4a-in-and
 
 
 <script src=ws/js/ts604.js></script>
+
+<!-- the web server external root path can point to this file. -->
