--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
@@ -1,17 +1,15 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-<title> root index</title>
+<title>root index</title>
+<!-- 11/24/2017 v0.219 -->
 py andy svr
 <br>
-<a href=/a> about</a> </br>
-<a href=/ws/ct.htm> ct</a> </br>
-<a href=/t/motor> motor</a> </br>
-<a href=/ts/save/a1000/peony> ts save a1000</a> </br>
-<a href=/ts/get/a1000> ts get a1000</a> </br>
-<a href=/ws/hello.htm> hello</a> </br>
-<a href=/ws/textStoreAny.htm> textStoreAny</a> </br>
-<a href=/ws/textStore.htm> textStore</a> </br>
+<a href=/a> about</a> <br>
+<a href=/t/motor>server echo</a> <br>
+<a href=/ts/save/A1000/senior> ts save A1000</a> <br>
+<a href=/ts/get/A1000> ts get A1000</a> <br />
+<a href=/ws/textStoreAny.htm> textStoreAny</a> <br>
+<br>
 <hr>
-https://stackoverflow.com/questions/37721676/web-app-with-qpython-an-sl4a-in-android
 
 
 <script src=ws/js/ts604.js></script>
