--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/rootindex.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <title>root index</title>
-<!-- 11/24/2017 v0.219 -->
+<!-- 11/24/2017 v0.221 -->
 py andy svr
 <br>
 <a href=/a> about</a> <br>
@@ -8,6 +8,7 @@ py andy svr
 <a href=/ts/save/A1000/senior> ts save A1000</a> <br>
 <a href=/ts/get/A1000> ts get A1000</a> <br />
 <a href=/ws/textStoreAny.htm> textStoreAny</a> <br>
+<a href=/ws/playground.html> playground</a> <br>
 <br>
 <hr>
 
