--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/playground.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/playground.html
@@ -1,4 +1,5 @@
 <div>
   <a href="playground.html?js=J1001">test J1001</a>.
 </div>
+<script src="js/tshelper.js"></script>
 <script src="js/tsjscgi.js"></script>
