--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
@@ -1,5 +1,5 @@
 <body>
-<!-- 11/25/2017 jchoy v0.126 testrig -->
+<!-- 11/25/2017 jchoy v0.127 gateway client -->
 
 <div id='gwrig'> test gateway 
   <a href=# onclick="runtest()">Run test</a>
@@ -9,7 +9,27 @@
 
 </body>
 <script>
+gatewayClient= function(url){
+    const D=document;
+    const gateway= (function(){
+        const el= D.createElement('iframe');
+        el.src= url;
+        return D.body.appendChild( el );
+    })();
+    function handleResponse(ev){
+        if (ev.origin != url ) return console.log("origin mismatch");
+        if (ev.source != gateway ) return console.log("source mismatch");
+        const gr = JSON.parse( ev.data );
+        console.log( gr );
+    }
+    window.addEventListener('message',handleResponse);
+    function get(num){
+        const gc = {cat:'get', num:'A1001'}
+        gateway.postMessage(JSON.stringify(gc));
+    }
+    return {get:get}
+}
 runtest= function(){
-    alert(64);
+    gatewayClient("http://192.168.1.25:8081/ws/gateway.html").get('A1001');
 }
 </script>
