--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
@@ -1,5 +1,5 @@
 <body>
-<!-- 11/25/2017 jchoy v0.129 client; clientWindow -->
+<!-- 11/25/2017 jchoy v0.131 client; contentWindow, * -->
 
 <div id='gwrig'> test gateway 
   <a href=# onclick="runtest()">Run test</a>
@@ -25,7 +25,7 @@ gatewayClient= function(url){
     window.addEventListener('message',handleResponse);
     function get(num){
         const gc = {cat:'get', num:'A1001'}
-        gateway.contentWindow.postMessage(JSON.stringify(gc),url);
+        gateway.contentWindow.postMessage(JSON.stringify(gc),'*');
     }
     return {get:get}
 }
