--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
@@ -1,11 +1,9 @@
 <body>
-<!-- 11/25/2017 jchoy v0.132 setTimeout -->
+<!-- 11/25/2017 jchoy v0.135 setTimeout -->
 
-<div id='gwrig'> test gateway 
+<div id='gwrig'> test gateway - a -
   <a href=# onclick="runtest()">Run test</a>
 </div>
-<iframe src="http://192.168.1.25:8081/ws/gateway.html">
-</iframe>
 
 </body>
 <script>
