--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/gwrig.html
@@ -1,33 +1,13 @@
 <body>
-<!-- 11/25/2017 jchoy v0.138 setTimeout -->
+<!-- 11/25/2017 jchoy v0.141 gatewayClient -->
 
 <div id='gwrig'> test gateway - a -
   <a href=# onclick="runtest()">Run test</a>
 </div>
 
 </body>
+<script src="js/gateway.js"></script>
 <script>
-gatewayClient= function(url){
-    const D=document;
-    const gateway= (function(){
-        const el= D.createElement('iframe');
-        el.src= url;
-        return D.body.appendChild( el );
-    })();
-    function handleResponse(ev){
-        if (ev.origin != url ) console.log("origin mismatch",ev.origin);
-        if (ev.source != gateway ) console.log("source mismatch",ev.source);
-        const gr = JSON.parse( ev.data );
-        console.log( gr );
-    }
-    window.addEventListener('message',handleResponse);
-    function get(theNum){
-        const gc = {cat:'get', num:theNum}
-        gateway.contentWindow.postMessage(JSON.stringify(gc),'*');
-        setTimeout( function(){get(theNum)}, 20000 );
-    }
-    return {get:get}
-}
 runtest= function(){
     gatewayClient("http://192.168.1.25:8081/ws/gateway.html").get('A1001');
 }
